--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,6 +1,6 @@
 name: Matthew Stevans
 
-label: doctoral student researcher in astronomy 
+label: doctoral student in astronomy 
 
 picture: /img/stevans_headshot_2016.png
 
