--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ paypal_url:
 flattr_button:
 
 # Build settings
-markdown:     redcarpet
+#markdown:     redcarpet
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
