remove gsps link from header

--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -45,4 +45,4 @@ profiles:
 intro:
   title: Howdy.
   body: >
-    I am a doctoral student at [The University of Texas at Austin](http://www.utexas.edu/).   My astronomical research interests include galaxy evolution at high redshifts and the ionizing continua of active galactic nuclei.
+    I am an astronomy doctoral student at [The University of Texas at Austin](http://www.utexas.edu/).   My astronomical research interests include galaxy evolution at high redshifts and the ionizing continua of active galactic nuclei.
