change address and add column for blog link in header

--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -8,15 +8,12 @@ email: stevans@astro.as.utexas.edu
 
 phone: 
 
-department: Astronomy
+department: Department of Astronomy
 
-institution: UTexas
+institution: The University of Texas at Austin
 
 mailing_address: |
   <i class="fa fa-university"></i>
-  The University of Texas at Austin
-  <br>
-  Department of Astronomy
   <br>
   2515 Speedway, Stop C1400
   <br>
